# base36

./: CHANGELOG.md  LICENSE  README.md  base36.cabal
.github/workflows/: haskell.yml
src/Data/Text/: Base36.hs
test/: Main.hs
